--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@post) do |f| %>
+<%= form_for @post, :html => {:multipart => true} do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -18,6 +18,17 @@
   <div class="field">
     <%= f.label :content %><br>
     <%= f.text_area :content %>
+  </div>
+  <div class="field">
+    <%= f.file_field :image %><br>
+  </div>
+  <div class="field">
+    <%= f.label :remote_image_url, "or image url" %><br>
+    <%= f.text_field :remote_image_url %>
+  </div>
+  <div class="field">
+    <%= f.label :video, "or video url" %><br>
+    <%= f.text_field :video %>
   </div>
   <div class="actions">
     <%= f.submit %>
