--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,6 +6,8 @@
   <thead>
     <tr>
       <th>Title</th>
+      <th>Image</th>
+      <th>Video</th>
       <th>Content</th>
       <th colspan="3"></th>
     </tr>
@@ -15,6 +17,8 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.title %></td>
+        <td><%= image_tag post.image.url if post.image? %></td>
+        <td><%= youtube_video post.video if post.video? %></td>
         <td><%= post.content %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
