Pagination, styling, tags added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <%= render 'layouts/nav' %>
+  <div class = "container" %>
+    <%= render 'layouts/title' %>
+    <%= yield %>
+  </div>
 </body>
 </html>
