--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,10 +1,10 @@
 <div class="blog-masthead">
   <div class="container">
     <nav class="blog-nav">
-      <p class="blog-nav-item active"><%= link_to "Home", root_path %></p>
-      <a class="blog-nav-item" href="#">Video</a>
-      <a class="blog-nav-item" href="#">Image</a>
-      <a class="blog-nav-item" href="#">Text</a>
+      <a class="blog-nav-item active" href='http://localhost:3000/'>Home</a>
+      <a class="blog-nav-item" href="http://localhost:3000/tags/2">Video</a>
+      <a class="blog-nav-item" href="http://localhost:3000/tags/6">Image</a>
+      <a class="blog-nav-item" href="http://localhost:3000/tags/10">Text</a>
       <a class="blog-nav-item" href="#">About</a>
     </nav>
   </div>
