--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,58 +1,10 @@
 <p id="notice"><%= notice %></p>
 <div class="row">
   <div class="col-sm-8 blog-main">
-
     <% @posts.each do |post| %>
-      <div class="blog-post">
-        <h2 class="blog-post-title"><%= link_to post.title, post %></h2>
-        <p class="blog-post-meta"><%= post.created_at %> by Tom | 
-          Tags:
-          <% post.tags.each do |tag| %>
-            <%= link_to tag.name, tag_path(tag) %>
-          <% end %>
-        </p>
-        <p> <%= post.content %> </p>
-        <p class="video"><%= youtube_video post.video if post.video? %></p>
-        <p class="image"><%= image_tag post.image.url if post.image? %></p>
-      </div>
+      <%= render post %>
     <% end %>
-
     <%= will_paginate %>
   </div><!-- /.blog-main -->
-
-    <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
-      <div class="sidebar-module sidebar-module-inset">
-        <h4>About</h4>
-        <p>Stuff</p>
-      </div>
-      <div class="sidebar-module">
-        <h4>Archives</h4>
-        <ol class="list-unstyled">
-          <li><a href="#">March 2014</a></li>
-          <li><a href="#">February 2014</a></li>
-          <li><a href="#">January 2014</a></li>
-          <li><a href="#">December 2013</a></li>
-          <li><a href="#">November 2013</a></li>
-          <li><a href="#">October 2013</a></li>
-          <li><a href="#">September 2013</a></li>
-          <li><a href="#">August 2013</a></li>
-          <li><a href="#">July 2013</a></li>
-          <li><a href="#">June 2013</a></li>
-          <li><a href="#">May 2013</a></li>
-          <li><a href="#">April 2013</a></li>
-        </ol>
-      </div>
-      <div class="sidebar-module">
-        <h4>Elsewhere</h4>
-        <ol class="list-unstyled">
-          <li><a href="#">GitHub</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">Facebook</a></li>
-          <li><%= link_to 'New Post', new_post_path %><li>
-        </ol>
-      </div>
-    </div><!-- /.blog-sidebar -->
-
+  <%= render 'shared/sidebar' %>
 </div><!-- /.row -->
-
-<br>
