--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href='https://fonts.googleapis.com/css?family=Kreon' rel='stylesheet' type='text/css'>
   <title>SkiBlog</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -12,5 +13,6 @@
     <%= render 'layouts/title' %>
     <%= yield %>
   </div>
+  <%= render 'layouts/footer' %>
 </body>
 </html>
