--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,4 +7,4 @@
                                          data: { confirm: "You sure?" } %> |
   <%= link_to 'Edit', edit_post_path(@post) %> |
 <% end %>
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', root_path %>
