--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,15 +1,17 @@
 <div class="blog-masthead">
   <div class="container">
     <nav class="blog-nav">
+      <% video = '/tags/' << get_url('video').to_s %>
+      <% image = '/tags/' << get_url('image').to_s %>
+      <% text = '/tags/' << get_url('text').to_s %>
       <% home_active = "active" if current_page?('/') %>
-      <% video_active = "active" if current_page?('/tags/2') %>
-      <% image_active = "active" if current_page?('/tags/6') %>
-      <% text_active = "active" if current_page?('/tags/10') %>
-      <a class="blog-nav-item <%= home_active %>" href='http://localhost:3000/'>Home</a>
-      <a class="blog-nav-item <%= video_active %>" href="http://localhost:3000/tags/2">Video</a>
-      <a class="blog-nav-item <%= image_active %>" href="http://localhost:3000/tags/6">Image</a>
-      <a class="blog-nav-item <%= text_active %>" href="http://localhost:3000/tags/10">Text</a>
-      <a class="blog-nav-item" href="#">About</a>
+      <% video_active = "active" if current_page?(video) %>
+      <% image_active = "active" if current_page?(image) %>
+      <% text_active = "active" if current_page?(text) %>
+      <a class="blog-nav-item <%= home_active %>" href='/'>Home</a>
+      <a class="blog-nav-item <%= video_active %>" href="<%= video %>">Video</a>
+      <a class="blog-nav-item <%= image_active %>" href="<%= image %>">Image</a>
+      <a class="blog-nav-item <%= text_active %>" href="<%= text %>">Text</a>
     </nav>
   </div>
 </div>
