--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,31 +1,21 @@
 <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
   <div class="sidebar-module sidebar-module-inset">
     <h4>About</h4>
-    <p>Stuff</p>
+    <p>Hi, my name is Tom Harpur and this site is where I share some of my favourite videos, images, and thoughts regarding skiing.</p>
   </div>
   <div class="sidebar-module">
     <h4>Archives</h4>
     <ol class="list-unstyled">
-      <li><a href="#">March 2014</a></li>
-      <li><a href="#">February 2014</a></li>
-      <li><a href="#">January 2014</a></li>
-      <li><a href="#">December 2013</a></li>
-      <li><a href="#">November 2013</a></li>
-      <li><a href="#">October 2013</a></li>
-      <li><a href="#">September 2013</a></li>
-      <li><a href="#">August 2013</a></li>
-      <li><a href="#">July 2013</a></li>
-      <li><a href="#">June 2013</a></li>
-      <li><a href="#">May 2013</a></li>
-      <li><a href="#">April 2013</a></li>
+      <li><a href="/posts/by_year_and_month/2015/10">October 2015</a></li>
+      <li><a href="/posts/by_year_and_month/2015/09">September 2015</a></li>
+      <li><a href="/posts/by_year_and_month/2015/08">August 2015</a></li>
     </ol>
   </div>
   <div class="sidebar-module">
     <h4>Elsewhere</h4>
     <ol class="list-unstyled">
-      <li><a href="#">GitHub</a></li>
-      <li><a href="#">Twitter</a></li>
-      <li><a href="#">Facebook</a></li>
+      <li><a href="https://github.com/t-harps/ski-blog">GitHub</a></li>
+      <li><a href="tom-harpur.herokuapp.com">My Personal Website</a></li>
       <% if admin_signed_in? %>
         <li><%= link_to 'New Post', new_post_path %><li>
       <% end %>
