added some images

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -15,7 +15,7 @@
     <h4>Elsewhere</h4>
     <ol class="list-unstyled">
       <li><a href="https://github.com/t-harps/ski-blog">GitHub</a></li>
-      <li><a href="tom-harpur.herokuapp.com">My Personal Website</a></li>
+      <li><a href="https://tom-harpur.herokuapp.com">My Personal Website</a></li>
       <% if admin_signed_in? %>
         <li><%= link_to 'New Post', new_post_path %><li>
       <% end %>
