--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,7 +41,9 @@ a {
  */
 
 .blog-masthead {
-  background-color: #428bca;
+  background-image: image-url('background.jpeg');
+  background-position: left top;
+  background-repeat: no-repeat;
   -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
           box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
 }
@@ -87,6 +89,8 @@ a {
 .blog-header {
   padding-top: 20px;
   padding-bottom: 20px;
+  background-image: image-url('skier.jpg');
+  background-position: left top;
 }
 .blog-title {
   margin-top: 30px;
@@ -150,8 +154,10 @@ a {
   padding: 40px 0;
   color: #999;
   text-align: center;
-  background-color: #f9f9f9;
   border-top: 1px solid #e5e5e5;
+  background-image: image-url('background.jpeg');
+  background-position: left bottom;
+  background-repeat: no-repeat;
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
