--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 <div class="row">
   <div class="col-sm-8 blog-main">
+    <%= link_to 'Coposition', "auth/coposition_oauth2" %>
     <% @posts.each do |post| %>
       <%= render post %>
     <% end %>
